labs/lab02-openshift-basic-resources/manifests/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-web
  namespace: os-basic-lab
  labels:
    app: lab-web
spec:
  selector:
    app: lab-web
  ports:
    - name: http
      port: 8080
      targetPort: http
