labs/lab02-openshift-basic-resources/manifests/06-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: lab-web
  namespace: os-basic-lab
  labels:
    app: lab-web
spec:
  to:
    kind: Service
    name: lab-web
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
